# asap-authentication-python

./: .mailmap  .travis.yml  AUTHORS  ChangeLog  LICENSE  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  test-requirements-py3.txt  test-requirements.txt
.github/workflows/: build.yml  codeql-analysis.yml
atlassian_jwt_auth/: __init__.py  algorithms.py  auth.py  exceptions.py  key.py  signer.py  test.py  verifier.py
atlassian_jwt_auth/aio/: __init__.py  key.py  verifier.py
atlassian_jwt_auth/contrib/: README.md  requests.py
atlassian_jwt_auth/contrib/aiohttp/: __init__.py  auth.py  key.py  verifier.py
atlassian_jwt_auth/contrib/django/: __init__.py  decorators.py  middleware.py  utils.py
atlassian_jwt_auth/contrib/django_app/: __init__.py  admin.py  apps.py  auth.py  decorators.py  models.py
atlassian_jwt_auth/contrib/django_app/migrations/: 0001_initial.py
atlassian_jwt_auth/contrib/flask_app/: __init__.py  decorators.py  utils.py
atlassian_jwt_auth/contrib/server/: __init__.py  helpers.py
atlassian_jwt_auth/contrib/tests/: test_django.py  test_flask.py  test_requests.py  utils.py
atlassian_jwt_auth/contrib/tests/aiohttp/: __init__.py  test_auth.py  test_public_key_provider.py  test_verifier.py
atlassian_jwt_auth/contrib/tests/django/: settings.py  test_django.py  urls.py  views.py
atlassian_jwt_auth/frameworks/common/: asap.py  backend.py  decorators.py  exceptions.py  utils.py
atlassian_jwt_auth/frameworks/common/tests/: test_utils.py
atlassian_jwt_auth/frameworks/django/: __init__.py  backend.py  decorators.py  middleware.py
atlassian_jwt_auth/frameworks/django/tests/: settings.py  test_django.py  urls.py  views.py
atlassian_jwt_auth/frameworks/flask/: __init__.py  backend.py  decorators.py
atlassian_jwt_auth/frameworks/flask/tests/: test_flask.py
atlassian_jwt_auth/frameworks/wsgi/: __init__.py  backend.py  middleware.py
atlassian_jwt_auth/frameworks/wsgi/tests/: test_wsgi.py
atlassian_jwt_auth/tests/: test_https_multi_public_key_retriever.py  test_key.py  test_private_key_provider.py  test_public_key_provider.py  test_signer.py  test_signer_private_key_repo.py  test_verifier.py  utils.py
atlassian_jwt_auth/tests/aio/: test_public_key_provider.py  test_verifier.py
atlassian_jwt_auth/tests/jwtprivatekeys/issuer-with-many-keys/: key1.pem.new
examples/django_example/django_example/: settings.py  urls.py  views.py
