[metadata]
name = atlassian-jwt-auth
summary = Python implementation of the Atlassian Service to Service Authentication specification.
license = MIT
classifier =
    Development Status :: 4 - Beta
        Environment :: Console
        Intended Audience :: Developers
        Operating System :: OS Independent
        Programming Language :: Python
        Programming Language :: Python :: 2
        Programming Language :: Python :: 2.7
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.4
        Programming Language :: Python :: 3.5
        Programming Language :: Python :: 3.6
        License :: OSI Approved :: MIT License

[files]
packages =
    atlassian_jwt_auth

[bdist_wheel]
universal=1
