[metadata]
name = atlassian-jwt-auth
summary = Python implementation of the Atlassian Service to Service Authentication specification.
description-file =
    README.rst
license = MIT
classifier =
    Development Status :: 4 - Beta
        Environment :: Console
        Intended Audience :: Developers
        Operating System :: OS Independent
        Programming Language :: Python
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.6
        Programming Language :: Python :: 3.7
        Programming Language :: Python :: 3.8
        License :: OSI Approved :: MIT License

[files]
packages =
    atlassian_jwt_auth

[bdist_wheel]
universal=1

[nosetests]
verbosity=2
nocapture=1
nologcapture=1
