[metadata]
name = atlassian-jwt-auth
summary = Python implementation of the Atlassian Service to Service Authentication specification.
author = Atlassian
author_email = dblack@atlassian.com
url = https://github.com/atlassian/asap-authentication-python
project_urls =
     Bug Tracker = https://github.com/atlassian/asap-authentication-python/issues
     Source Code = https://github.com/atlassian/asap-authentication-python
description_file =
    README.rst
license = MIT
classifier =
    Development Status :: 4 - Beta
        Environment :: Console
        Intended Audience :: Developers
        Operating System :: OS Independent
        Programming Language :: Python
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.8
        Programming Language :: Python :: 3.9
        Programming Language :: Python :: 3.10
        Programming Language :: Python :: 3.11
        Programming Language :: Python :: 3.12
        Programming Language :: Python :: 3.13
        License :: OSI Approved :: MIT License

[files]
packages =
    atlassian_jwt_auth

[bdist_wheel]
universal=1

[tool:pytest]
addopts = -s -v -x

[aliases]
test=pytest
